Fixed collapse internal divs in accordion

--- a/less/forms.less
+++ b/less/forms.less
@@ -345,7 +345,6 @@
                 font-size: 12pt;
                 position: absolute;
                 #font > .normal;
-                display: inline-block;
             }
 
 
@@ -355,7 +354,6 @@
 
             &:active {
                 background-color: #000;
-
 
                 &:before {
                     color: #fff;
